--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,52 +6,75 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.ahmad.mdc.MainActivity">
+    >
 
-
-    <Button
+    <TextView
+        android:id="@+id/testView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Bluetooth Connect"
-        android:id="@+id/idBluetoothc"
-        android:layout_marginTop="152dp"
-        android:layout_alignParentTop="true"
+        android:layout_above="@+id/txtString"
+        android:text=""
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/txtString"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/testView1"
+        android:layout_alignParentBottom="true"
+        android:text=""
+        android:textSize="15sp" />
+
+    <Button
+        android:id="@+id/buttonOn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="43dp"
-        android:layout_marginStart="43dp"
-        android:onClick="btnBluetothc" />
+        android:layout_alignParentTop="true"
+        android:text="LED ON" />
 
     <Button
-        style="?android:attr/buttonStyleSmall"
+        android:id="@+id/buttonOff"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Statas"
-        android:id="@+id/idStatas"
-        android:layout_alignBottom="@+id/idBluetoothc"
-        android:layout_toRightOf="@+id/idBluetoothc"
-        android:layout_toEndOf="@+id/idBluetoothc"
-        android:onClick="btnStatas" />
+        android:layout_alignBottom="@+id/buttonOn"
+        android:layout_alignParentRight="true"
+        android:text="LED OFF" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <TextView
+        android:id="@+id/sensorView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Settings"
-        android:id="@+id/idSettings"
-        android:layout_below="@+id/idBluetoothc"
-        android:layout_alignLeft="@+id/idBluetoothc"
-        android:layout_alignStart="@+id/idBluetoothc"
-        android:onClick="btnStteings" />
+        android:layout_below="@+id/sensorView0"
+        android:layout_centerHorizontal="true"
+        android:text="Sensor 1 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
-    <Button
-        style="?android:attr/buttonStyleSmall"
+    <TextView
+        android:id="@+id/sensorView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="About"
-        android:id="@+id/idAbout"
-        android:layout_below="@+id/idBluetoothc"
-        android:layout_toRightOf="@+id/idSettings"
-        android:layout_toEndOf="@+id/idSettings"
-        android:onClick="btnAbout" />
+        android:layout_below="@+id/sensorView1"
+        android:layout_centerHorizontal="true"
+        android:text="Sensor 2 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/sensorView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sensorView2"
+        android:layout_centerHorizontal="true"
+        android:text="Sensor 3 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/sensorView0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="196dp"
+        android:text="Sensor 0 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
 </RelativeLayout>
