--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -3,6 +3,7 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
-        android:title="action_settings"/>
+        android:showAsAction="never"
+        android:title="@string/action_settings"/>
 
 </menu>
