--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimaryDark">#f6f8ff</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="holo_primary_dark">#c6ffffff</color>
+    <color name="primary_dark_material_light_1">#5c6e7c</color>
 </resources>
