--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#f6f8ff</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#45d293</color>
+    <color name="colorPrimaryDark">#70a9e6</color>
+    <color name="colorAccent">#ff4081</color>
     <color name="holo_primary_dark">#c6ffffff</color>
-    <color name="primary_dark_material_light_1">#5c6e7c</color>
+    <color name="primary_dark_material_light_1">#19a466</color>
 </resources>
