--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,173 +6,75 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="#05668D"
     >
 
+    <TextView
+        android:id="@+id/testView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/txtString"
+        android:text=""
+        android:textSize="15sp" />
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#028090"
-        android:id="@+id/relativeLayout"
-        android:layout_above="@+id/relativeLayout4"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-
-
-        <TextView
-            android:id="@+id/sensorView0"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sensor 0 Voltage = ????"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#ffffff"
-            android:textSize="25dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true" />
-
-    </RelativeLayout>
-
-
-    <RelativeLayout
-        android:layout_width="500dp"
-        android:layout_height="80dp"
-        android:background="#4a96ae"
-        android:id="@+id/relativeLayout4"
-        android:layout_above="@+id/relativeLayout3"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="3dp">
-
-        <TextView
-            android:id="@+id/sensorView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sensor 1 Voltage = ????"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#ffffff"
-            android:textSize="25dp"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="5dp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#02C39A"
-        android:id="@+id/relativeLayout3"
-        android:layout_above="@+id/relativeLayout5"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="3dp">
-
-        <TextView
-            android:id="@+id/sensorView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sensor 2 Voltage = ????"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#ffffff"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="25dp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="#049878"
-        android:id="@+id/relativeLayout5"
-        android:layout_above="@+id/relativeLayout6"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="3dp"
-        android:layout_marginBottom="3dp">
-
-        <TextView
-            android:id="@+id/sensorView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Sensor 3 Voltage = ????"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="#ffffff"
-            android:layout_centerVertical="true"
-            android:layout_centerHorizontal="true"
-            android:textSize="25dp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
+    <TextView
+        android:id="@+id/txtString"
+        android:layout_width="wrap_content"
+        android:layout_height="50dp"
+        android:layout_alignLeft="@+id/testView1"
         android:layout_alignParentBottom="true"
+        android:text=""
+        android:textSize="15sp" />
 
-        android:layout_alignTop="@+id/testView1"
-        android:id="@+id/relativeLayout6">
-
-        <Button
-            android:id="@+id/buttonOn"
-            android:layout_width="120dp"
-            android:layout_height="match_parent"
-            android:layout_alignParentLeft="true"
-            android:layout_alignParentTop="true"
-            android:text="LED ON"
-            android:background="#cbd8d6" />
-
-        <Button
-            android:id="@+id/buttonOff"
-            android:layout_width="120dp"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/buttonOn"
-            android:layout_alignParentRight="true"
-            android:text="LED OFF"
-            android:layout_alignParentTop="true"
-            android:background="#cbd8d6"
-            android:layout_toRightOf="@+id/button_viewAll"
-            android:layout_toEndOf="@+id/button_viewAll" />
-
-
-
-
-
-        <Button
-            android:layout_width="120dp"
-            android:layout_height="match_parent"
-            android:text="View All"
-            android:id="@+id/button_viewAll"
-            android:layout_centerHorizontal="true"
-            android:layout_alignParentTop="true"
-            android:background="#cbd8d6"
-            android:layout_marginLeft="20dp" />
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_above="@+id/relativeLayout"
+    <Button
+        android:id="@+id/buttonOn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true">
-        <TextView
-            android:id="@+id/testView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_above="@+id/txtString"
-            android:text=""
-            android:textSize="15sp" />
+        android:layout_alignParentTop="true"
+        android:text="LED ON" />
 
-        <TextView
-            android:id="@+id/txtString"
-            android:layout_width="wrap_content"
-            android:layout_height="50dp"
-            android:layout_alignLeft="@+id/testView1"
-            android:layout_alignParentBottom="true"
-            android:text=""
-            android:textSize="15sp" />
+    <Button
+        android:id="@+id/buttonOff"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/buttonOn"
+        android:layout_alignParentRight="true"
+        android:text="LED OFF" />
 
-    </RelativeLayout>
+    <TextView
+        android:id="@+id/sensorView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sensorView0"
+        android:layout_centerHorizontal="true"
+        android:text="Sensor 1 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/sensorView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sensorView1"
+        android:layout_centerHorizontal="true"
+        android:text="Sensor 2 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/sensorView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/sensorView2"
+        android:layout_centerHorizontal="true"
+        android:text="Sensor 3 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
+
+    <TextView
+        android:id="@+id/sensorView0"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="196dp"
+        android:text="Sensor 0 Voltage = ????"
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
 </RelativeLayout>
